<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.osos.appdeskservice.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.osos.appdeskservice.ui.report.ReportFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_report">

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.osos.appdeskservice.ui.settings.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting">

    </fragment>
    <fragment
        android:id="@+id/navigation_date"
        android:name="com.osos.appdeskservice.ui.date.DateFragment"
        android:label="fragment_date"
        tools:layout="@layout/fragment_date" />


</navigation>